# Chat-Django

./: docker-compose.yml  pyproject.toml
ChatWebSite/: Dockerfile  manage.py  pyproject.toml
ChatWebSite/AuthApp/: forms.py  urls.py  views.py
ChatWebSite/Chat/: models.py
ChatWebSite/ChatApp/: admin.py  apps.py  consumers.py  forms.py  models.py  routing.py  tasks.py  urls.py  views.py
ChatWebSite/ChatApp/migrations/: 0001_initial.py  0002_chat_chat_avatar.py  0003_rename_chat_avatar_chat_avatar.py
ChatWebSite/ChatWebSite/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
ChatWebSite/static/css/chat/: css.css
ChatWebSite/templates/auth/: login.html  registration.html
ChatWebSite/templates/chat/: chat.html  chats.html
